--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </article>
       </div>
       <article>
+        <class>
           <h2 class="rides">Bekijk onze geweldige attracties</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
       </article>
@@ -40,7 +41,7 @@
         <h2>Koop nu je tickets</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, ad. Similique neque sequi quibusdam, harum ratione fugit quia cupiditate doloribus totam obcaecati perferendis asperiores necessitatibus, exercitationem pariatur magni, quaerat minima.</p>
         <p>
-          <button>Bestel nu de tickets (&euro; 24,95)</button>
+          <button onclick="document.location='cart.html'">Bestel nu de tickets (&euro; 24,95)</button>
         </p>
         <p>
           Of neem een abonnement, want met slechts 4 bezoekjes ben je al voordeliger uit!
