--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,36 @@
         <div>
           <span>Dit zijn alle producten die u gaat bestellen. Controleer een laatste keer of alles klopt en ga daarna verder met de grote groene knop.</span>
           <!-- 
-            Winkelwagen hier
+          <body>
+
+<table style="width:100%">
+  <tr>
+    <th>product</th>
+    <th>prijs</th> 
+    <th>aantal</th>
+    <th> Prijs totaal</th>
+  </tr>
+  <tr>
+    <td>Entreekaartje kind 1 tm 3 jaar</td>
+    <td>€0</td>
+    <td>1</td>
+    <td>€0</td>
+  </tr>
+  <tr>
+    <td>entreekaartje regulier</td>
+    <td>€24,95</td>
+    <td>2</td>
+    <td>€49,90</td>
+  </tr>
+  <tr>
+    <td>entreekaartje Senior</td>
+    <td>€14,95</td>
+    <td>1</td>
+    <td>€14,95</td>
+  </tr>
+</table>
+
+</body>
           -->
           
           <button>Dit is correct, verder naar betaling</button>
