--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DeveloperLand - Het meest leerzame prepark voor het hele gezin!</title>
+  <title>DeveloperLand - Het meest leerzame pretpark voor het hele gezin!</title>
 
   <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -41,6 +41,9 @@
             <a href="javascript:alert('Dit valt buiten de scope van dit project');">
               <img src="images/paypal-logo-1024.png" alt="Met PayPal betalen" class="payment-option">
             </a>
+            <style TYPE="text/css">
+              ul#menu1 { margin: 2; padding: 2; list-style-type: none; }
+              </style>
           </div>
         </div>
       </article>
