--- a/cart.html
+++ b/cart.html
@@ -55,7 +55,7 @@
 </body>
           -->
           
-          <button>Dit is correct, verder naar betaling</button>
+          <button onclick="document.location='payment.html'">Dit is correct, verder naar betaling</button>
         </div>
       </article>
     </div>
