--- a/product.html
+++ b/product.html
@@ -17,7 +17,13 @@
     </div>
   </header>
   <main>
-    
+    <h2>DeveloperLand Mok</h2>
+    <img src="images/merchandise/mok.JPG" alt="mok">
+    <h3>In het kort: Een mok met jou eigen actiefoto erop!
+      Prijs &euro; 14,95
+      over dit product: een mooie mok met jou eigen foto. De opdrik is van hoge kwaliteit en laat de lachende, huilende en van de pret gezichten zien van iedereen in jouw achtbaan karretje.
+    </h3>
+    <button>Plaats in winkelmand(+ &euro;14,95)</button>
   </main>
   <footer>
     <div class="wrapper">
